--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
@@ -1,8 +1,8 @@
 <p-toast position="top-right"></p-toast>
 <div class="admin-page p-3">
-  <p-card header="Thông tin vé" class="p-shadow-14">
+  <p-card header="Thông tin chi tiết vé tàu" class="p-shadow-14">
     <p-toolbar>
-      <div class="p-toolbar-group-left">Xát nhận thông tin loại vé</div>
+      <div class="p-toolbar-group-left"></div>
       <div class="p-toolbar-group-right">
         <p-button
           icon="pi pi-times"
@@ -16,7 +16,25 @@
       <div class="col-12 mt-4">
         <form>
           <div class="p-fluid formgrid grid">
-            <div class="col-7">
+            <div class="col-6 p-shadow-14">
+              <p-card subheader="Thông tin vé tàu">
+                <div class="grid">
+                  <div class="col-6">
+                    <div class="col-12">Tên khách hàng:</div>
+                    <div class="col-12">Số điện thoại:</div>
+                    <div class="col-12">Loại vé:</div>
+                    <div class="col-12">Giá vé:</div>
+                  </div>
+                  <div class="col-6">
+                    <div class="col-12">Loại tàu:</div>
+                    <div class="col-12">Tên tàu:</div>
+                    <div class="col-12">Số ghế:</div>
+                    <div class="col-12">Thời gian khởi hành:</div>
+                  </div>
+                </div>
+              </p-card>
+            </div>
+            <div class="col-6">
               <div class="grid">
                 <div class="p-field col-6 mb-3">
                   <label for="name">Đại lý bán vé</label>
@@ -24,30 +42,19 @@
                 </div>
                 <div class="p-field col-6 mb-3">
                   <label for="price">Số người</label>
-
                   <p>{{ tickets.idOrderNavigation.quantityOfPerson }}</p>
-                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
                 </div>
                 <div class="p-field col-6">
                   <label for="dateOrder">Ngày đặt</label>
-
                   <p>
                     {{
                       tickets.idOrderNavigation.dateOrder | date: 'dd/MM/YYYY'
                     }}
                   </p>
-                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
                 </div>
                 <div class="p-field col-6">
                   <label for="status">Khách hàng</label>
                   <p>{{ tickets.nameCustomer }}</p>
-                  <!-- <small *ngIf="tourForm.status.invalid && isSubmit" class="p-error"
-                  >Status is required</small
-                > -->
                 </div>
                 <div class="p-field col-6"></div>
                 <div class="p-field col-6 mt-3">
@@ -58,17 +65,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-5 p-shadow-14">
-              <p-card subheader="Thông tin vé tàu">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Provident repellendus laborum impedit quis cupiditate aliquam
-                  corporis temporibus rerum praesentium tempora perspiciatis
-                  culpa blanditiis quo nesciunt ratione laboriosam quidem, eius
-                  dignissimos.
-                </p>
-              </p-card>
-            </div>
           </div>
         </form>
       </div>
@@ -77,7 +73,12 @@
       <div class="col-12 mt-4">
         <form>
           <div class="p-fluid formgrid grid">
-            <div class="col-7">
+            <div class="col-6 p-shadow-14">
+              <p-card subheader="Thông tin vé tàu">
+                <p-skeleton width="28rem" height="10rem"></p-skeleton>
+              </p-card>
+            </div>
+            <div class="col-6">
               <div class="grid">
                 <div class="p-field col-6 mb-3">
                   <label for="name">Đại lý bán vé</label>
@@ -85,26 +86,15 @@
                 </div>
                 <div class="p-field col-6 mb-3">
                   <label for="price">Số người</label>
-
                   <p-skeleton></p-skeleton>
-                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
                 </div>
                 <div class="p-field col-6">
                   <label for="serviceFeePercentage">Ngày đặt</label>
-
                   <p-skeleton></p-skeleton>
-                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
                 </div>
                 <div class="p-field col-6">
                   <label for="status">Khách hàng</label>
                   <p-skeleton></p-skeleton>
-                  <!-- <small *ngIf="tourForm.status.invalid && isSubmit" class="p-error"
-                  >Status is required</small
-                > -->
                 </div>
                 <div class="p-field col-6"></div>
                 <div class="p-field col-6 mt-3">
@@ -112,11 +102,6 @@
                   <p-skeleton></p-skeleton>
                 </div>
               </div>
-            </div>
-            <div class="col-5 p-shadow-14">
-              <p-card subheader="Thông tin vé tàu">
-                <p-skeleton width="24rem" height="10rem"></p-skeleton>
-              </p-card>
             </div>
           </div>
         </form>
