--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
@@ -1,8 +1,8 @@
 <p-toast position="top-right"></p-toast>
 <div class="admin-page p-3">
-  <p-card header="Chỉnh sửa thông tin loại vé" class="p-shadow-14">
+  <p-card header="Xát nhận yêu cầu thông tin loại vé" class="p-shadow-14">
     <p-toolbar>
-      <div class="p-toolbar-group-left">Xát nhận thông tin loại vé</div>
+      <div class="p-toolbar-group-left">Xát nhận thông tin</div>
       <div class="p-toolbar-group-right">
         <p-button
           icon="pi pi-times"
@@ -16,54 +16,65 @@
       <div class="col-12 mt-4">
         <form [formGroup]="form">
           <div class="p-fluid formgrid grid">
-            <div class="p-field col-6 mb-3">
-              <label for="name">Hạng vé</label>
-              <p>{{ tickesType.name }}</p>
+            <div class="col-7">
+              <div class="grid">
+                <div class="p-field col-6 mb-3">
+                  <label for="name">Hạng vé</label>
+                  <p>{{ tickesType?.name }}</p>
+                </div>
+                <div class="p-field col-6 mb-3">
+                  <label for="price">Giá vé</label>
+                  <p>{{ tickesType?.price | currency: 'VND' }}</p>
+                </div>
+                <div class="p-field col-6">
+                  <label for="serviceFeePercentage">Phí dịch vụ(%)</label>
+                  <P>{{ tickesType?.serviceFeePercentage }}%</P>
+                </div>
+                <div class="p-field col-6">
+                  <label for="status">Trạng thái</label>
+                  <p-dropdown
+                    optionLabel="name"
+                    optionValue="id"
+                    [options]="status"
+                    placeholder="Select Status"
+                    formControlName="status"
+                    [showClear]="true"
+                  ></p-dropdown>
+                  <small
+                    *ngIf="ticketTypeForm.status.invalid && isSubmit"
+                    class="p-error"
+                    >Trạng không được trống</small
+                  >
+                </div>
+                <div class="p-field col-6"></div>
+                <div class="p-field col-6 mt-5">
+                  <button
+                    pButton
+                    pRipple
+                    type="button"
+                    icon="pi pi-check"
+                    label="Confirm"
+                    (click)="onSubmit()"
+                    class="p-button-raised p-button-help p-button-text"
+                  ></button>
+                </div>
+              </div>
             </div>
-            <div class="p-field col-6 mb-3">
-              <label for="price">Giá vé</label>
-
-              <p>{{ tickesType.price | currency: 'VND' }}</p>
-              <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
-            </div>
-            <div class="p-field col-6">
-              <label for="serviceFeePercentage">Phí dịch vụ(%)</label>
-
-              <P>{{ tickesType.serviceFeePercentage }}%</P>
-
-              <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
-            </div>
-            <div class="p-field col-6">
-              <label for="status">Trạng thái</label>
-              <p-dropdown
-                optionLabel="name"
-                optionValue="id"
-                [options]="status"
-                placeholder="Select Status"
-                formControlName="status"
-                [showClear]="true"
-              ></p-dropdown>
-              <small
-                *ngIf="ticketTypeForm.status.invalid && isSubmit"
-                class="p-error"
-                >Trạng không được trống</small
-              >
-            </div>
-            <div class="p-field col-6"></div>
-            <div class="p-field col-6 mt-5">
-              <button
-                pButton
-                pRipple
-                type="button"
-                icon="pi pi-check"
-                label="Confirm"
-                (click)="onSubmit()"
-                class="p-button-raised p-button-help p-button-text"
-              ></button>
+            <div class="col-5">
+              <p-card subheader="Thông tin chủ tàu">
+                <div class="grid">
+                  <div class="col-6">
+                    <div class="col-12">Name</div>
+                    <div class="col-12">Phone</div>
+                    <div class="col-12">Email</div>
+                    <div class="col-12">Address</div>
+                  </div>
+                  <div class="col-6">
+                    <div class="col-12">Vũng tàu 3</div>
+                    <div class="col-12">Trạng thái</div>
+                  </div>
+                </div>
+              </p-card>
             </div>
           </div>
         </form>
@@ -73,36 +84,34 @@
       <div class="col-12 mt-4">
         <form>
           <div class="p-fluid formgrid grid">
-            <div class="p-field col-6 mb-3">
-              <label for="name">Hạng vé</label>
-              <p-skeleton></p-skeleton>
+            <div class="col-7">
+              <div class="grid">
+                <div class="p-field col-6 mb-3">
+                  <label for="name">Hạng vé</label>
+                  <p-skeleton></p-skeleton>
+                </div>
+                <div class="p-field col-6 mb-3">
+                  <label for="price">Giá vé</label>
+                  <p-skeleton></p-skeleton>
+                </div>
+                <div class="p-field col-6">
+                  <label for="serviceFeePercentage">Phí dịch vụ(%)</label>
+                  <p-skeleton></p-skeleton>
+                </div>
+                <div class="p-field col-6">
+                  <label for="status">Trạng thái</label>
+                  <p-skeleton></p-skeleton>
+                </div>
+                <div class="p-field col-6"></div>
+                <div class="p-field col-6 mt-5">
+                  <p-skeleton></p-skeleton>
+                </div>
+              </div>
             </div>
-            <div class="p-field col-6 mb-3">
-              <label for="price">Giá vé</label>
-
-              <p-skeleton></p-skeleton>
-              <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
-            </div>
-            <div class="p-field col-6">
-              <label for="serviceFeePercentage">Phí dịch vụ(%)</label>
-
-              <p-skeleton></p-skeleton>
-              <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
-                  >Tittle is required</small
-                > -->
-            </div>
-            <div class="p-field col-6">
-              <label for="status">Trạng thái</label>
-              <p-skeleton></p-skeleton>
-              <!-- <small *ngIf="tourForm.status.invalid && isSubmit" class="p-error"
-                  >Status is required</small
-                > -->
-            </div>
-            <div class="p-field col-6"></div>
-            <div class="p-field col-6 mt-5">
-              <p-skeleton></p-skeleton>
+            <div class="col-5">
+              <p-card>
+                <p-skeleton width="24rem" height="10rem"></p-skeleton>
+              </p-card>
             </div>
           </div>
         </form>
