--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/ticket-type/ticket-type.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/ticket-type/ticket-type.component.html
@@ -82,7 +82,7 @@
                   pButton
                   pRipple
                   icon="ni ni-tag"
-                  class="p-button-rounded p-button-success mr-2"
+                  class="p-button-rounded p-button-help mr-2"
                   (click)="editTicketType(ticketType.id)"
                 ></button>
               </td>
