--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
@@ -34,7 +34,11 @@
                     </div>
                     <div class="col-12">
                       Giá vé:
-                      <p>{{ tickets.idTicketTypeNavigation.price }}</p>
+                      <p>
+                        {{
+                          tickets.idTicketTypeNavigation.price | currency: 'VND'
+                        }}
+                      </p>
                     </div>
                   </div>
                   <div class="col-6">
