fix horizaltal scroll

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.scss
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.scss
@@ -1,3 +1,7 @@
+nav {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 .navbar-vertical.navbar-expand-md .navbar-brand-img {
   max-height: 5.5rem;
 }
