fix login and avatar doashboard

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="header bg-gradient-danger py-7 py-lg-8">
   <div class="container">
     <div class="header-body text-center mb-7">
-      <div class="row justify-content-center">
+      <!-- <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Xin chào!</h1>
           <p class="text-lead text-light">
@@ -10,7 +10,7 @@
             phí.
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="separator separator-bottom separator-skew zindex-100">
